# spanish-pipeline-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE
src/: error.rs  google_image.rs  main.rs
src/pipeline/: docx.rs  flashcard.rs  load.rs  mod.rs  parse.rs  transform.rs  visual_vocab.rs
src/spider/: google_image.rs  mod.rs  spanish_dict.rs
src/templates/: flashcard.typ
