[package]
name = "spanish_pipeline"
version = "0.1.0"
edition = "2021"


[dependencies]
json5 = "0.4.1"
log = "0.4.17"
once_cell = "1.17.1"
reqwest = { version = "^0.11", features = [
    "json",
    "cookies",
    "deflate",
    "gzip",
    "brotli",
] }
scraper = "0.16.0"
serde_json = "1.0.96"
simple_logger = { version = "4.1.0", features = ["colors"] }
tokio = { version = "^1.11", features = ["full"] }
url = "2.3.1"
