[package]
name = "spanish_pipeline"
version = "0.1.0"
edition = "2021"


[dependencies]
async-trait = "0.1.68"
clap = "4.2.7"
docx-rs = "0.4.6"
ego-tree = "0.6.2"
futures = "0.3.28"
html5ever = "0.26.0"
json5 = "0.4.1"
log = "0.4.17"
once_cell = "1.17.1"
rand = "0.8.5"
reqwest = { version = "^0.11", features = [
    "json",
    "cookies",
    "deflate",
    "gzip",
    "brotli",
] }
rust-bert = { git = "https://github.com/guillaume-be/rust-bert" }
scraper = "0.16.0"
serde_json = "1.0.96"
simple_logger = { version = "4.1.0", features = ["colors"] }
tokio = { version = "^1.11", features = ["full"] }
url = "2.3.1"
