[package]
name = "spanish_pipeline"
version = "0.1.0"
edition = "2021"
authors = ["Yubo Cao <cao2006721@gmail.com"]
description = "A pipeline for Spanish Homework"
license = "MIT"

[profile.release]
strip = true
codegen-units = 1
panic = "abort"
lto = true

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.2.7", features = ["derive", "error-context"] }
clipboard = "0.5.0"
docx-rs = "0.4.6"
ego-tree = "0.6.2"
futures = "0.3.28"
html5ever = "0.26.0"
json5 = "0.4.1"
log = "0.4.17"
once_cell = "1.17.1"
rand = "0.8.5"
reqwest = { version = "^0.11", features = [
    "json",
    "cookies",
    "deflate",
    "gzip",
    "brotli",
] }
rust-bert = { git = "https://github.com/guillaume-be/rust-bert" }
scraper = "0.16.0"
serde = "1.0.163"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
torch-sys = { version = "^0.12.0", features = ["download-libtorch"] }
tokio = { version = "^1.11", features = ["full"] }
url = "2.3.1"
fern = { version = "0.6.2", features = ["colored"] }
image = "0.24.6"
tempfile = "3.5.0"
